32) kernel: usb: MT7621 xHCI: fix memory leak, add losted workarounds from MTK SDK.<br>
33) kernel: usb: option: add support TS-UM6602 modem (aka MOTIV 4G).<br>
34) kernel: mips: revert: make CAC_ADDR and UNCAC_ADDR account for PHYS_OFFSET.<br>
35) kernel: mips: revert: adjust mips highmem offset to avoid the need for -mlong-calls on systems with >256M RAM.<br>
36) kernel: mips: revert: fix race condition in lazy cache flushing.<br>
37) kernel: mips: fix work highmem at 7621 samples.<br>
38) kernel: mips: fix highmem crash in __update_cache.<br>
39) kernel: mips: autodetect memsize not support high memory (limit detect to 448Mb on mips boards).<br>
40) kenrel: mips: allow long calls on highmem support builds.<br>
41) kernel: net: add length argument to skb_copy_and_csum_datagram_iovec.<br>
42) kernel: net: neighbour: fix crash at dumping device-agnostic proxy entries.<br>
43) kernel: net: increase conntrack size depend by ram_size.<br>
44) kernel: net: ipmr: fix static mfc/dev leaks on table destruction.<br>
45) kernel: net: ipmr: fix possible race resulting from improper usage of IP_INC_STATS_BH() in preemptible context.<br>
46) kernel: net: ipmr, ip6mr: fix vif/tunnel failure race condition.<br>
47) kernel: net: ipv6: fix tunnel error handling.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~99%).<br>
2) need add ForwardSesLimit to Firewall page (default 0 - disabled).<br>
3) need add subchannel select for 5GHz module.<br>
4) need review, experiments with new roaming code in MT76x2 driver, need add multiif support in iappd daemon and implement to WebUI.<br>
5) in very far future: need add in firewall support xt_time matches for parental control.<br>
6) in very far future: need add perip shaper script and webui .<br>
7) in very far future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
8) in very far future: port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
<br>
<br>
<br>