@@ -1520,6 +1520,7 @@
 45) kernel: net: ipmr: fix possible race resulting from improper usage of IP_INC_STATS_BH() in preemptible context.<br>
 46) kernel: net: ipmr, ip6mr: fix vif/tunnel failure race condition.<br>
 47) kernel: net: ipv6: fix tunnel error handling.<br>
+48) kernel: net: packet: allow to transmit +4 byte in TX_RING slot for VLAN case.<br>
 <br>
 <br>
 <b>TODO:</b><br>
